--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -62,6 +62,14 @@
         &__description {
             max-width: 57%;
 
+            @include responsive('desktop-xl') {
+                max-width: 100%;
+
+                br {
+                    display: none;
+                }
+            }
+
             p {
                 font-size: rv(18px, 26px);
                 color: $black;
