--- a/wp-content/themes/gtoken/scss/abstracts/_variables.scss
+++ b/wp-content/themes/gtoken/scss/abstracts/_variables.scss
@@ -102,6 +102,7 @@ $breakpoints: (
   'desktop-m': 1260px,
   'desktop': 1440px,
   'desktop-l': 1500px,
+  'desktop-xl': 1680px,
   ) !default;
 
 $transition-default: all 1s cubic-bezier(0.165, 0.840, 0.440, 1.000
