--- a/wp-content/themes/gtoken/scss/editor-blocks.scss
+++ b/wp-content/themes/gtoken/scss/editor-blocks.scss
@@ -9,70 +9,62 @@
             font-family: 'Bitter', serif;
         }
 
-        .hero--home,
-        .hero--overview {
-            .title {
-                font-size: 120px;
+        .hero--home {
+            .hero__text {
+                .title {
+                    font-size: 160px;
+                }
             }
         }
 
-        .hero--overview {
-            .breadcrumb {
-                list-style: none;
-            }
-        }
+        .text-papper {
+            .content__text {
+                .title {
+                    font-size: 65px;
 
-        .block-tabs {
-            .tabs button {
-                font-size: 18px;
-                padding: 0 50px;
-            }
-
-            .tabs-content {
-                .content {
-                    padding-left: 350px;
-
-                    .text p {
-                        font-size: 27px;
+                    span {
+                        font-size: 65px;
                     }
                 }
+            }
 
-                .img {
-                    max-width: 350px;
+            .content__description {
+                max-width: 85%;
+            }
+        }
+
+        .number_grid__cont {
+            .number {
+                font-size: 130px;
+            }
+
+            .number_text {
+                font-size: 57px;
+            }
+
+            .number_grid__item {
+                .number_content {
+                    font-size: 20px;
                 }
             }
         }
 
-        .block-banner-text {
-            .title {
-                font-size: 116px;
-                line-height: 1;
-            }
-        }
-
-        .block-customers {
-            .item {
-                .text p {
-                    font-size: 25px;
+        .slider-links {
+            .swiper-cont {
+                .slider-partners {
+                    .item img {
+                        width: 350px;
+                    }
                 }
             }
         }
 
-        .block-cta {
-            .title {
-                font-size: 58px;
-                line-height: 1.2;
-            }
+        .image-text {
+            background-color: #3ACBED;
 
-            .subtitle {
-                font-size: 24px;
-            }
-        }
-
-        .block-engagement {
-            .image {
-                max-width: 38%;
-                right: 35%;
+            .image-text__title {
+                text-transform: uppercase;
+                font-size: 60px;
             }
         }
     }
