--- a/wp-content/themes/gtoken/scss/blocks/_default-block.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_default-block.scss
@@ -80,7 +80,7 @@
         padding: 0;
     }
 
-    &.list {
+    /*  &.list {
         @include list-styles();
         margin-top: 20px;
         margin-bottom: 20px;
@@ -98,7 +98,7 @@
             line-height: 1.5;
             margin-bottom: 25px;
         }
-    }
+    } */
 
     .aligncenter {
         margin: 0 auto;
