--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -15,6 +15,10 @@
         align-items: center;
         transition: all 0.3s ease;
 
+        @include responsive('mobile-h') {
+            padding: 30px 0;
+        }
+
         &::after {
             content: '';
             background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
@@ -57,6 +61,10 @@
         padding: 0 30px 20px 64px;
         font-style: italic;
         display: none;
+
+        @include responsive('mobile-h') {
+            padding: 0 0 20px 0;
+        }
     }
 
     &::before {
