--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -108,6 +108,10 @@
                             width: 348px;
                             max-width: 100%;
                             text-align: left;
+
+                            &:hover {
+                                opacity: 0.5;
+                            }
                         }
                     }
                 }
