--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -110,6 +110,10 @@
                 line-height: 1;
                 font-style: italic;
                 font-family: $calluna;
+
+                &:hover {
+                    opacity: 0.5;
+                }
             }
 
             &::before {
