--- a/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
@@ -108,6 +108,10 @@
             text-decoration: none;
             text-transform: capitalize;
             font-family: $calluna;
+
+            &:hover {
+                opacity: 0.5;
+            }
         }
 
         &::before {
