--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -808,6 +808,11 @@ strong * {
 								font-size: 120px;
 				}
 }
+@media only screen and (max-width: 768px) {
+				.hero--home .hero__text .title {
+								font-size: 60px;
+				}
+}
 .hero--home .hero__text p {
 				font-size: clamp(20px, 0.2px + 0.033 * 100vw, 38px);
 				line-height: 1.26;
@@ -2106,6 +2111,9 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				font-style: italic;
 				font-family: "Calluna";
 }
+.text-papper .content__link a:hover {
+				opacity: 0.5;
+}
 .text-papper .content__link::before {
 				content: "";
 				background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
@@ -2202,11 +2210,6 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				position: relative;
 				padding-bottom: clamp(60px, 5.4px + 0.091 * 100vw, 110px);
 }
-@media only screen and (max-width: 1500px) {
-				.image-text {
-								background-color: #3ACBED;
-				}
-}
 .image-text::after {
 				content: "";
 				background-color: #3ACBED;
@@ -2216,11 +2219,6 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				width: 100%;
 				height: 456px;
 }
-@media only screen and (max-width: 1500px) {
-				.image-text::after {
-								display: none;
-				}
-}
 .image-text__cont {
 				display: -webkit-box;
 				display: -ms-flexbox;
@@ -2228,14 +2226,6 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				-webkit-box-align: center;
 				    -ms-flex-align: center;
 				        align-items: center;
-}
-@media only screen and (max-width: 1500px) {
-				.image-text__cont {
-								-webkit-box-orient: vertical;
-								-webkit-box-direction: normal;
-								    -ms-flex-direction: column;
-								        flex-direction: column;
-				}
 }
 .image-text__content {
 				display: -webkit-box;
@@ -2293,6 +2283,11 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				margin-top: 70px;
 				line-height: 1;
 				max-width: 480px;
+}
+@media only screen and (max-width: 1680px) {
+				.image-text__title {
+								font-size: 55px;
+				}
 }
 .image-text__text {
 				font-family: "Bitter", serif;
@@ -2454,6 +2449,9 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				text-transform: capitalize;
 				font-family: "Calluna";
 }
+.number_grid__link a:hover {
+				opacity: 0.5;
+}
 .number_grid__link::before {
 				content: "";
 				background: url(images/icons/arrow-select.png) no-repeat center/contain;
@@ -2573,6 +2571,9 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				width: 348px;
 				max-width: 100%;
 				text-align: left;
+}
+.slider-links .swiper-cont .swiper.slider-partners.swiper .item a p:hover {
+				opacity: 0.5;
 }
 .slider-links .swiper-cont .swiper.slider-partners .swiper-wrapper {
 				text-align: center;
