--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -17,6 +17,7 @@
 
         @include responsive('mobile-h') {
             padding: 30px 0;
+            gap: 20px;
         }
 
         &::after {
@@ -26,6 +27,11 @@
             width: 29px;
             height: 29px;
             transition: all 0.3s ease;
+
+            @include responsive('mobile-h') {
+                width: 20px;
+                height: 20px;
+            }
         }
     }
 
