--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -30,6 +30,10 @@
                     object-fit: contain;
                     float: left;
                     margin-bottom: 20px;
+
+                    @include responsive('mobile-h') {
+                        width: 100%;
+                    }
                 }
             }
 
