--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -787,6 +787,11 @@ Blocks Styles
 				    left: 0;
 				} */
 }
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .hero--home {
+								aspect-ratio: 1;
+				}
+}
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__image, .editor-styles-wrapper .acf-block-preview .hero--home .hero__video {
 				max-width: 100%;
 				width: 100%;
@@ -870,6 +875,15 @@ Blocks Styles
 				bottom: 0;
 				width: 100%;
 				height: 100%;
+}
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .hero--home video {
+								-o-object-fit: cover;
+								   object-fit: cover;
+								-ms-flex-item-align: 1;
+								    -ms-grid-row-align: 1;
+								    align-self: 1;
+				}
 }
 .editor-styles-wrapper .acf-block-preview .header {
 				position: fixed;
@@ -2118,7 +2132,7 @@ Blocks Styles
 				-webkit-transition: all 0.3s ease;
 				transition: all 0.3s ease;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1050px) {
 				.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__question {
 								padding: 30px 0;
 								gap: 20px;
@@ -2297,8 +2311,9 @@ Blocks Styles
 }
 @media only screen and (max-width: 900px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont {
-								-ms-grid-columns: (1fr)[1];
+								-ms-grid-columns: 1fr;
 								grid-template-columns: repeat(1, 1fr);
+								gap: 45px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
@@ -2308,16 +2323,14 @@ Blocks Styles
 				color: #231F20;
 				font-family: "Druk-Medium";
 				max-height: 240px;
+				/*  @include responsive('tablet-v') {
+				    max-height: inherit;
+				} */
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
 								font-size: 200px;
 								max-height: 180px;
-				}
-}
-@media only screen and (max-width: 900px) {
-				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
-								max-height: 140px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
@@ -2473,6 +2486,11 @@ Blocks Styles
 				   object-fit: contain;
 				float: left;
 				margin-bottom: 20px;
+}
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .slider-partners .item img {
+								width: 100%;
+				}
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .slider-partners .swiper-slide {
 				display: -webkit-box;
