--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -15,7 +15,7 @@
         align-items: center;
         transition: all 0.3s ease;
 
-        @include responsive('mobile-h') {
+        @include responsive('tablet-h') {
             padding: 30px 0;
             gap: 20px;
         }
