--- a/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
@@ -15,6 +15,7 @@
 
         @include responsive('tablet-v') {
             grid-template-columns: repeat(1, 1fr);
+            gap: 45px;
         }
 
         .number {
@@ -30,9 +31,9 @@
                 max-height: 180px;
             }
 
-            @include responsive('tablet-v') {
-                max-height: 140px;
-            }
+            /*  @include responsive('tablet-v') {
+                max-height: inherit;
+            } */
 
         }
 
@@ -48,6 +49,8 @@
             @include responsive('desktop-l') {
                 font-size: 60px;
             }
+
+
         }
     }
 
