--- a/wp-content/themes/gtoken/scss/hero/_home.scss
+++ b/wp-content/themes/gtoken/scss/hero/_home.scss
@@ -5,6 +5,10 @@
     align-items: flex-start;
     aspect-ratio: 16/9;
 
+    @include responsive('mobile-h') {
+        aspect-ratio: 1;
+    }
+
     .hero {
 
         &__image,
@@ -85,6 +89,11 @@
         bottom: 0;
         width: 100%;
         height: 100%;
+
+        @include responsive('mobile-h') {
+            object-fit: cover;
+            align-self: 1;
+        }
     }
 
     /*  &::after {
