--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -747,6 +747,11 @@ strong * {
 				    left: 0;
 				} */
 }
+@media only screen and (max-width: 768px) {
+				.hero--home {
+								aspect-ratio: 1;
+				}
+}
 .hero--home .hero__image, .hero--home .hero__video {
 				max-width: 100%;
 				width: 100%;
@@ -829,6 +834,15 @@ strong * {
 				bottom: 0;
 				width: 100%;
 				height: 100%;
+}
+@media only screen and (max-width: 768px) {
+				.hero--home video {
+								-o-object-fit: cover;
+								   object-fit: cover;
+								-ms-flex-item-align: 1;
+								    -ms-grid-row-align: 1;
+								    align-self: 1;
+				}
 }
 
 .header {
@@ -2160,7 +2174,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				-webkit-transition: all 0.3s ease;
 				transition: all 0.3s ease;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1050px) {
 				.accordion--faqs .accordion__question {
 								padding: 30px 0;
 								gap: 20px;
@@ -2341,8 +2355,9 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 @media only screen and (max-width: 900px) {
 				.number_grid__cont {
-								-ms-grid-columns: (1fr)[1];
+								-ms-grid-columns: 1fr;
 								grid-template-columns: repeat(1, 1fr);
+								gap: 45px;
 				}
 }
 .number_grid__cont .number {
@@ -2352,16 +2367,14 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				color: #231F20;
 				font-family: "Druk-Medium";
 				max-height: 240px;
+				/*  @include responsive('tablet-v') {
+				    max-height: inherit;
+				} */
 }
 @media only screen and (max-width: 1500px) {
 				.number_grid__cont .number {
 								font-size: 200px;
 								max-height: 180px;
-				}
-}
-@media only screen and (max-width: 900px) {
-				.number_grid__cont .number {
-								max-height: 140px;
 				}
 }
 .number_grid__cont .number_text {
@@ -2518,6 +2531,11 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				   object-fit: contain;
 				float: left;
 				margin-bottom: 20px;
+}
+@media only screen and (max-width: 768px) {
+				.slider-links .swiper-cont .slider-partners .item img {
+								width: 100%;
+				}
 }
 .slider-links .swiper-cont .slider-partners .swiper-slide {
 				display: -webkit-box;
